Add security requirements for swagger, change access to reactions to any user
